--- a/src/components/watchvideo/watchvideo.module.scss
+++ b/src/components/watchvideo/watchvideo.module.scss
@@ -25,9 +25,14 @@
                 font-size: 20px;
                 font-weight: 600;
                 padding: 20px 20px;
+                &:hover{
+                  color: var(--second-color);
+                  cursor: pointer;
+                }
             }
             .tabTitleWrap{
-               
+               margin-top: 20px;
+               margin-left: 20px;
                display: flex;
                margin-bottom: 20px;
                justify-content: space-between;
@@ -39,16 +44,25 @@
                    margin-left: 3px;
                 }
                } 
-               .tabTitleIcon{
-                 margin-right: 20px;
+               .tabIcons{
+                margin-right: 20px;
                 color: #ececec;
-                font-size: 26px;
-               } 
+                &:hover{
+                color: var(--second-color);
+                  cursor: pointer;
+                }
+                .listIcon{    
+                font-size: 26px;              
+                 } 
+                 .moduleIcon{
+                font-size: 26px;              
+                 }
+               }         
             }
-            .scrollep{
-              
-            }
-            .listEps{
+            .scrollEps{
+              height: 400px;
+              overflow-y: auto;
+              .listEps{
                 color: #fff;
                 
                 span{
@@ -56,10 +70,13 @@
                     background-color: #23252b;
                     margin: 0 0 8px 8px;
                     border-radius: 5px;
-                    overflow: hidden;
-
                 }
+              }
+              .listEpsVideo{
+                margin: 0px 5px;
+              }
             }
+           
     }     
 }
 
@@ -83,32 +100,6 @@ background: #555;
 }
 
 /////////////////////////////////////////////////
-.tab{
-  color: #fff;
-  font-size: 14px;
-}
-.castItem{
-  width: 100%;
-  height: 300px;
-  margin-top: 30px;
-  margin-bottom: 30px;
-  text-decoration: none;
-  color: #fff;
-  overflow: hidden;
-  cursor: pointer;
-  img{
-      width: 100%;
-      height: 90%;
-      object-fit: cover;
-  }
-  .castName{
-    font-size: 16px;
-      width: 100%;
-      height: 10%;
-      color: #fff;
-  }
-}
-
   .infoName{
     font-size: 28px;
     font-weight: 700;
