--- a/src/components/itemCard/item.module.scss
+++ b/src/components/itemCard/item.module.scss
@@ -1,5 +1,5 @@
 .list_item{
-    height: 335px;
+    height: 345px;
     // width: 215px;
     position: relative;
     margin-top: 20px;
@@ -18,9 +18,7 @@
             width: 100%;
             height: 90%;
             object-fit: cover;
-                background-position: center top;
-
-            // background-position: center top;
+            background-position: center top;
         }
         .odditem_name{
           font-size: 16px;
@@ -39,8 +37,8 @@
             cursor: pointer;
             -webkit-box-shadow: 0px 0px 5px 1px rgba(255,255,255,0.46); 
             box-shadow: 0px 0px 5px 1px rgba(255,255,255,0.46);
-            width: 125%;
-            height: 335px;
+            width: 120%;
+            height: 345px;
             z-index: 10;
             top: -15px;
             right: 22px;
@@ -113,13 +111,18 @@
                 }
                 .genre {
                   padding: 5px 0;
+                  width:100%;
                   color: #fff;
-                  overflow: hidden;
+                  display: flex;
+                  flex-wrap: wrap;
                   margin-right: 20px ;
                   span{
                   margin: 0;
-                  font-size: 13px;
+                  font-size: 12px;
+                  padding: 1px 3px;
+                  background-color: rgba(0, 0, 0, 0.5);
                   margin-right: 5px ;
+                  margin-bottom: 2px;
                   &:hover{
                     color: var(--second-color);
                   }
