--- a/src/components/navigation/navigation.module.scss
+++ b/src/components/navigation/navigation.module.scss
@@ -1,4 +1,4 @@
-.naviga{
+.container{
     position: fixed;
     background: linear-gradient(to top, transparent 0%, rgb(0, 0, 0, 0.6) 50%);
     text-align: center;
@@ -14,7 +14,7 @@
         
       }
     .navigalist{
-        height: 70px;
+        height: 60px;
         display: flex;
         flex-wrap: nowrap;
     }
