--- a/src/components/slideshow/slideshow.scss
+++ b/src/components/slideshow/slideshow.scss
@@ -11,11 +11,43 @@
       z-index: 1;
     }
   .slide-img {
-    // position: absolute;
     width: 100%;
     height: 100%;
     background-size: cover;
-    }
-   
+    }   
 }
+ .btnBack {
+   position: absolute;
+   top:40%;
+   left:0;
+   .iconBack {
+     font-size: 50px;
+     color: #fff;
+   }
+   &:hover{
+     cursor: pointer;
+     .iconBack{
+     color:var(--second-color)
+     }
+   }
+ }
+
+ .btnNext {
+   position: absolute;
+   top:40%;
+    right: 0px;
+   .iconNext {
+     font-size: 50px;
+     color: #fff;
+   }
+   &:hover{
+     cursor: pointer;
+     .iconNext {
+      color:var(--second-color)
+     }
+     
+   }
+
+ }
+ 
   
