--- a/src/components/itemCard/item.module.scss
+++ b/src/components/itemCard/item.module.scss
@@ -101,12 +101,17 @@
                 }
                 .itemInfoTop {       
                   color: #fff;
+                   .start {
+                     font-size: 16px;
+                     margin-right: 2px;
+                     color: var(--second-color);
+                   }
                   span {
                     border: 1px solid gray;
                     font-size: 13px;
                     margin: 0;
                     padding: 1px;
-                    margin-right: 10px;
+                    margin-right: 10px;      
                   }
                 }
                 .genre {
