call api render page movie tv

--- a/src/components/body/body.module.scss
+++ b/src/components/body/body.module.scss
@@ -1,6 +1,9 @@
 .body{
     margin-top: 50px;
     color: #fff;
+    .listSlide{
+        margin: 80px 0;
+    }
     span{
         margin-left: 20px;
         font-size: 22px;
