--- a/src/components/castitem/castitem.module.scss
+++ b/src/components/castitem/castitem.module.scss
@@ -1,21 +1,29 @@
 .castItem{
     width: 100%;
-    height: 300px;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    height: 350px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     text-decoration: none;
+   
     color: #fff;
-    overflow: hidden;
     cursor: pointer;
     img{
         width: 100%;
-        height: 90%;
+        height: 87%;
         object-fit: cover;
+        border-radius: 5px;
     }
-    .castName{
-        font-size: 16px;
-        width: 100%;
-        height: 10%;
-        color: #fff;
-    }
+    .castTitle{
+         display: flex;
+         flex-direction: column;
+        height: 13%;
+         .castName {
+             font-size: 16px;
+             color: #fff;
+         }
+         .castCharacter {
+             font-size: 13px;
+             color: #e7b524;
+         }
+    } 
   }
