--- a/src/components/watchvideo/watchvideo.module.scss
+++ b/src/components/watchvideo/watchvideo.module.scss
@@ -3,11 +3,7 @@
     margin-top: 90px;
     padding:0 20px ;
     .video{
-        height: 100%;
-        video{
-            width: 100%;
-            height: 100%;
-        }
+       aspect-ratio: 16/9;
     }
     .rightBar{
             display: flex;
