--- a/src/components/bigCard/bigcard.module.scss
+++ b/src/components/bigCard/bigcard.module.scss
@@ -1,34 +1,19 @@
 .episodesWrap{
     width: 100%;
     margin-bottom: 10px;
+    height: 400px;
     position: relative;
     transform: scale(1);
     transition: all 0.3s ease 0s;
     &:hover{
     cursor: pointer;
-  transform: scale(1.03);
-    .icons{
-    display: block;
+    transform: scale(1.03);
+    
     }
-    }
-    .icons {
-      position: absolute;
-      display: none;
-      bottom: 35px;
-      right: 5px;
-        .icon {
-          color:var(--second-color);   
-          margin-right: 5px;
-          font-size: 40px;
-          &:hover{
-            opacity: 0.8;
-              
-        }
-      }
-    } 
+    
     .episodesItem{
       width: 100%;
-      height: 200px;
+      height: 100%;
       margin-bottom: 10px;
       img{
         width: 100%;
@@ -37,6 +22,12 @@
       }
     }
     .episodesNumber{
+      position: absolute;
+         bottom: 0;
+         right: 0;
+         left: 0;
+     background-color: rgba(0, 0, 0, 0.9);
+     text-align: center;
       color: var(--text-color);
       font-size: 16px;
       width: 100%;
