--- a/src/components/watchvideo/watchVideoSeries.module.scss
+++ b/src/components/watchvideo/watchVideoSeries.module.scss
@@ -85,6 +85,53 @@
 
             .listEpsVideo {
                 margin: 0px 5px;
+                .smallCard {
+                    margin-top: 10px;
+                    height: 100px;
+                    width: 100%;
+                    display: flex;
+                    overflow: hidden;
+
+                    // padding:  8px;
+                    &:hover {
+                        cursor: pointer;
+                        background-color: #2d2f34;
+                    }
+
+                    .cardImg {
+                        width: 60%;
+                        height: 100%;
+                        background-position: 100% 100%;
+
+                        img {
+                            width: 100%;
+                            height: 100%;
+
+                            border-radius: 5px;
+
+                        }
+                    }
+
+                    .cardDesc {
+                        display: flex;
+                        align-items: center;
+                        padding-left: 10px;
+                        width: 40%;
+
+                        span {
+                            font-size: 13px;
+                            line-height: 15px;
+                            font-weight: 600;
+                            margin-right: 10px;
+                            height: 30px;
+                            overflow: hidden;
+                            display: -webkit-box;
+                            -webkit-box-orient: vertical;
+                            -webkit-line-clamp: 2;
+                        }
+
+                    }
+                }
             }
 
 
@@ -167,7 +214,7 @@
 
 .infoType {
     display: flex;
-
+    margin-bottom: 8px;
     span {
         margin-right: 5px;
         font-size: 16px;
