--- a/src/components/bigCard/bigcard.module.scss
+++ b/src/components/bigCard/bigcard.module.scss
@@ -1,13 +1,15 @@
 .episodesWrap{
     width: 100%;
     margin-bottom: 10px;
-    height: 400px;
+    height: 52vh;
     position: relative;
     transform: scale(1);
     transition: all 0.3s ease 0s;
+     border-radius: 10px;
+    overflow: hidden;
     &:hover{
     cursor: pointer;
-    transform: scale(1.03);
+    transform: scale(1.01);
     
     }
     
@@ -22,15 +24,17 @@
       }
     }
     .episodesNumber{
-      position: absolute;
-         bottom: 0;
-         right: 0;
-         left: 0;
-     background-color: rgba(0, 0, 0, 0.9);
-     text-align: center;
-      color: var(--text-color);
-      font-size: 16px;
-      width: 100%;
+   position: absolute;
+   text-align: center;
+   font-weight: 500;
+   padding: 5px 0;
+   margin:0;
+   bottom: 0;
+   right: 0;
+   left: 0;
+   background-color: rgba(0, 0, 0, 0.8);
+   font-size: 16px;
+   color: #fff;
     }
    
   }
