--- a/src/components/watchvideo/watchVideoSeries.module.scss
+++ b/src/components/watchvideo/watchVideoSeries.module.scss
@@ -4,15 +4,19 @@
     padding: 0 20px;
 
     .video {
-        aspect-ratio: 16/9;
+        // aspect-ratio: 16/9;
+         width: 100%;
+         height: 100%;
     }
 
     .rightBar {
         display: flex;
         flex-direction: column;
         background-color: #1a1c22;
-        height: 100%;
-        width: 100%;
+          width: 100%;
+          height: 83vh;
+        overflow: hidden;
+
         .tab {
             color: #fff;
             background-color: #2d2f34;
@@ -70,11 +74,11 @@
         }
 
         .scrollEps {
-            height: 390px;
-            overflow-y: auto;
+            height: 60vh;
+                  overflow-y: auto;
+
             .listEps {
                 color: #fff;
-
                 span {
                     padding: 8px 18px;
                     background-color: #23252b;
@@ -84,6 +88,9 @@
             }
 
             .listEpsVideo {
+               height: 60vh ;
+            overflow-y: auto;
+
                 margin: 0px 5px;
                 .smallCard {
                     margin-top: 10px;
@@ -138,8 +145,8 @@
         }
 
         .scrollRecomend {
-            height: 500px;
-            overflow-y: auto;
+            height: 70vh;
+             overflow-y: auto;
 
             .listRecomendVideo {
                 margin: 0px 5px;
