--- a/src/components/watchvideo/watchvideo.module.scss
+++ b/src/components/watchvideo/watchvideo.module.scss
@@ -3,18 +3,25 @@
     margin-top: 90px;
     padding:0 20px ;
     .video{
-       aspect-ratio: 16/9;
+      width: 100%;
+      height: 100%;
     }
     .rightBar{
             display: flex;
             flex-direction: column;
             background-color: #1a1c22;
-            height: 100%;
-            .tab{
-                color: #fff;
-                background-color: #2d2f34;
-                font-size: 14px;
-                width: 100%;
+            width:   100%;
+            height: 83vh;
+            overflow: hidden;
+            .wrapRc{
+                padding: 16px 16px;
+                text-align: center;
+              background-color: #2d2f34;
+                  color: #fff;
+                  font-size: 16px;
+                  font-weight: 700;
+                  width: 100%;
+                  border-bottom: 3px solid #0665c8;
             }
             .movieName{
                 color: var(--text-color);
@@ -28,8 +35,8 @@
             }
               
                  .scrollRecomend{
-                   height:500px;
-                   overflow-y: auto;
+                  height: 70vh;
+                  overflow-y: auto;
                    .listRecomendVideo {
                      margin: 0px 5px;
                    }
@@ -138,6 +145,7 @@ background: #555;
     }
   }
   .desc {
+    margin-top: 10px;
     font-size: 16px;
     margin-bottom: 20px;
     line-height: 20px;
