--- a/src/components/navigation/navbar/navbar.module.scss
+++ b/src/components/navigation/navbar/navbar.module.scss
@@ -9,12 +9,12 @@
         align-items: center;
       
         .forYou{
-            color: #939090;
+            color: #fff;
             position: relative;
             display: flex;
             cursor: pointer;
             align-items: center;
-            padding: 0 14px;
+            padding: 0 25px;
             font-weight: 700;
             font-size: 0.875rem;
             letter-spacing: 0.02857em;
@@ -23,12 +23,12 @@
               }
         }   
         .movies{
-                color: #939090;
+                color: #fff;
                 position: relative;
                 display: flex;
                 cursor: pointer;
                 align-items: center;
-                padding: 0 14px;
+                padding: 0 25px;
                 font-weight: 700;
                 font-size: 0.875rem;
                 letter-spacing: 0.02857em;
@@ -38,12 +38,12 @@
 
         }
         .tvSeries{
-            color: #939090;
+            color: #fff;
             position: relative;
             display: flex;
             cursor: pointer;
             align-items: center;
-            padding: 0 14px;
+            padding: 0 25px;
             font-weight: 700;
             font-size: 0.875rem;
             letter-spacing: 0.02857em;
