--- a/src/components/navigation/myaccount/myaccount.module.scss
+++ b/src/components/navigation/myaccount/myaccount.module.scss
@@ -54,7 +54,7 @@
             background-color: var(--main-color);
             padding-left: 0;
             list-style: none;
-            width: 154px;
+            min-width: 154px;
             box-shadow: 0 0 3px #ccc;
             border-radius: 3px;
             .useritem span{
