--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -11,6 +11,19 @@
         font-size: 16px;
         font-weight: 500;
     }
+    .contractMe{
+        font-size: 16px;
+        span{
+            margin-right: 5px;
+        font-weight: 500;
+
+        }
+        a{
+            text-decoration: none;
+            color: #0674e7;
+
+        }
+    }
     .aboutMe{
         
         margin-right: 70px;
